rbd-mirror: close local image before stopping remote journaler

Fixes: http://tracker.ceph.com/issues/18963
Signed-off-by: Jason Dillaman <dillaman@redhat.com>