src/librbd/journal/Replay.cc
@@ -216,6 +216,7 @@ void Replay<I>::shut_down(bool cancel_ops, Context *on_finish) {
     // safely commit any remaining AIO modify operations
     if ((m_in_flight_aio_flush + m_in_flight_aio_modify) != 0) {
       flush_comp = create_aio_flush_completion(nullptr);
+      assert(flush_comp != nullptr);
     }
 
     for (auto &op_event_pair : m_op_events) {
@@ -240,6 +241,9 @@ void Replay<I>::shut_down(bool cancel_ops, Context *on_finish) {
       }
     }
 
+    assert(!m_shut_down);
+    m_shut_down = true;
+
     assert(m_flush_ctx == nullptr);
     if (m_in_flight_op_events > 0 || flush_comp != nullptr) {
       std::swap(m_flush_ctx, on_finish);
@@ -263,6 +267,9 @@ void Replay<I>::flush(Context *on_finish) {
     Mutex::Locker locker(m_lock);
     aio_comp = create_aio_flush_completion(
       util::create_async_context_callback(m_image_ctx, on_finish));
+    if (aio_comp == nullptr) {
+      return;
+    }
   }
 
   RWLock::RLocker owner_locker(m_image_ctx.owner_lock);
@@ -318,6 +325,10 @@ void Replay<I>::handle_event(const journal::AioDiscardEvent &event,
   auto aio_comp = create_aio_modify_completion(on_ready, on_safe,
                                                io::AIO_TYPE_DISCARD,
                                                &flush_required);
+  if (aio_comp == nullptr) {
+    return;
+  }
+
   io::ImageRequest<I>::aio_discard(&m_image_ctx, aio_comp, event.offset,
                                    event.length, event.skip_partial_discard,
 				   {});
@@ -326,7 +337,9 @@ void Replay<I>::handle_event(const journal::AioDiscardEvent &event,
     auto flush_comp = create_aio_flush_completion(nullptr);
     m_lock.Unlock();
 
-    io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    if (flush_comp != nullptr) {
+      io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    }
   }
 }
 
@@ -341,6 +354,10 @@ void Replay<I>::handle_event(const journal::AioWriteEvent &event,
   auto aio_comp = create_aio_modify_completion(on_ready, on_safe,
                                                io::AIO_TYPE_WRITE,
                                                &flush_required);
+  if (aio_comp == nullptr) {
+    return;
+  }
+
   io::ImageRequest<I>::aio_write(&m_image_ctx, aio_comp,
                                  {{event.offset, event.length}},
                                  std::move(data), 0, {});
@@ -349,7 +366,9 @@ void Replay<I>::handle_event(const journal::AioWriteEvent &event,
     auto flush_comp = create_aio_flush_completion(nullptr);
     m_lock.Unlock();
 
-    io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    if (flush_comp != nullptr) {
+      io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    }
   }
 }
 
@@ -364,8 +383,10 @@ void Replay<I>::handle_event(const journal::AioFlushEvent &event,
     Mutex::Locker locker(m_lock);
     aio_comp = create_aio_flush_completion(on_safe);
   }
-  io::ImageRequest<I>::aio_flush(&m_image_ctx, aio_comp, {});
 
+  if (aio_comp != nullptr) {
+    io::ImageRequest<I>::aio_flush(&m_image_ctx, aio_comp, {});
+  }
   on_ready->complete(0);
 }
 
@@ -380,6 +401,10 @@ void Replay<I>::handle_event(const journal::AioWriteSameEvent &event,
   auto aio_comp = create_aio_modify_completion(on_ready, on_safe,
                                                io::AIO_TYPE_WRITESAME,
                                                &flush_required);
+  if (aio_comp == nullptr) {
+    return;
+  }
+
   io::ImageRequest<I>::aio_writesame(&m_image_ctx, aio_comp, event.offset,
                                      event.length, std::move(data), 0, {});
   if (flush_required) {
@@ -387,7 +412,9 @@ void Replay<I>::handle_event(const journal::AioWriteSameEvent &event,
     auto flush_comp = create_aio_flush_completion(nullptr);
     m_lock.Unlock();
 
-    io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    if (flush_comp != nullptr) {
+      io::ImageRequest<I>::aio_flush(&m_image_ctx, flush_comp, {});
+    }
   }
 }
 
@@ -861,6 +888,12 @@ Context *Replay<I>::create_op_context_callback(uint64_t op_tid,
                                                Context *on_safe,
                                                OpEvent **op_event) {
   CephContext *cct = m_image_ctx.cct;
+  if (m_shut_down) {
+    ldout(cct, 5) << ": ignoring event after shut down" << dendl;
+    on_ready->complete(0);
+    m_image_ctx.op_work_queue->queue(on_safe, -ESHUTDOWN);
+    return nullptr;
+  }
 
   assert(m_lock.is_locked());
   if (m_op_events.count(op_tid) != 0) {
@@ -898,7 +931,10 @@ void Replay<I>::handle_op_complete(uint64_t op_tid, int r) {
     op_event = std::move(op_it->second);
     m_op_events.erase(op_it);
 
-    shutting_down = (m_flush_ctx != nullptr);
+    if (m_shut_down) {
+      assert(m_flush_ctx != nullptr);
+      shutting_down = true;
+    }
   }
 
   assert(op_event.on_start_ready == nullptr || (r < 0 && r != -ERESTART));
@@ -958,6 +994,13 @@ Replay<I>::create_aio_modify_completion(Context *on_ready, Context *on_safe,
   CephContext *cct = m_image_ctx.cct;
   assert(m_on_aio_ready == nullptr);
 
+  if (m_shut_down) {
+    ldout(cct, 5) << ": ignoring event after shut down" << dendl;
+    on_ready->complete(0);
+    m_image_ctx.op_work_queue->queue(on_safe, -ESHUTDOWN);
+    return nullptr;
+  }
+
   ++m_in_flight_aio_modify;
   m_aio_modify_unsafe_contexts.push_back(on_safe);
 
@@ -996,6 +1039,15 @@ Replay<I>::create_aio_modify_completion(Context *on_ready, Context *on_safe,
 template <typename I>
 io::AioCompletion *Replay<I>::create_aio_flush_completion(Context *on_safe) {
   assert(m_lock.is_locked());
+
+  CephContext *cct = m_image_ctx.cct;
+  if (m_shut_down) {
+    ldout(cct, 5) << ": ignoring event after shut down" << dendl;
+    if (on_safe != nullptr) {
+      m_image_ctx.op_work_queue->queue(on_safe, -ESHUTDOWN);
+    }
+    return nullptr;
+  }
 
   ++m_in_flight_aio_flush;
 
